--- a/ethereum-rar-demo-model/pom.xml
+++ b/ethereum-rar-demo-model/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>be.e-contract</groupId>
         <artifactId>ethereum-resource-adapter</artifactId>
-        <version>1.0.0</version>
+        <version>1.0.1-SNAPSHOT</version>
     </parent>
     <name>Ethereum Resource Adapter Demo Model</name>
     <groupId>be.e-contract.ethereum-resource-adapter</groupId>
@@ -100,7 +100,7 @@
         <dependency>
             <groupId>be.e-contract.ethereum-resource-adapter</groupId>
             <artifactId>ethereum-ra-api</artifactId>
-            <version>1.0.0</version>
+            <version>1.0.1-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
