--- a/pom.xml
+++ b/pom.xml
@@ -71,7 +71,7 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-javadoc-plugin</artifactId>
-                    <version>3.0.1</version>
+                    <version>3.1.0</version>
                     <configuration>
                         <doclint>none</doclint>
                     </configuration>
@@ -104,12 +104,12 @@
                 <plugin>
                     <groupId>org.jboss.ironjacamar</groupId>
                     <artifactId>ironjacamar-validator-maven</artifactId>
-                    <version>1.4.12.Final</version>
+                    <version>1.4.15.Final</version>
                 </plugin>
                 <plugin>
                     <groupId>org.wildfly.plugins</groupId>
                     <artifactId>wildfly-maven-plugin</artifactId>
-                    <version>2.0.0.Final</version>
+                    <version>2.0.1.Final</version>
                 </plugin>
                 <plugin>
                     <groupId>org.web3j</groupId>
@@ -153,7 +153,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <slf4j.version>1.7.25</slf4j.version>
         <log4j.version>2.11.1</log4j.version>
-        <web3j.version>4.1.1</web3j.version>
+        <web3j.version>4.2.0</web3j.version>
         <ethereum-node-location>http://127.0.0.1:8545</ethereum-node-location>
         <ethereum-node-web-socket-location>ws://127.0.0.1:8546</ethereum-node-web-socket-location>
     </properties>
@@ -259,6 +259,12 @@
             </dependency>
         </dependencies>
     </dependencyManagement>
+    <repositories>
+        <repository>
+            <id>bintray-web3j</id>
+            <url>https://dl.bintray.com/web3j/maven/</url>
+        </repository>
+    </repositories>
     <modules>
         <module>ethereum-rar</module>
         <module>ethereum-rar-demo</module>
