--- a/ethereum-ra-oracle-spi/pom.xml
+++ b/ethereum-ra-oracle-spi/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>be.e-contract</groupId>
         <artifactId>ethereum-resource-adapter</artifactId>
-        <version>1.2.4</version>
+        <version>1.2.5-SNAPSHOT</version>
     </parent>
     <name>Ethereum Resource Adapter Oracle SPI</name>
     <groupId>be.e-contract.ethereum-resource-adapter</groupId>
