--- a/pom.xml
+++ b/pom.xml
@@ -104,7 +104,7 @@
                 <plugin>
                     <groupId>org.jboss.ironjacamar</groupId>
                     <artifactId>ironjacamar-validator-maven</artifactId>
-                    <version>1.4.15.Final</version>
+                    <version>1.4.16.Final</version>
                 </plugin>
                 <plugin>
                     <groupId>org.wildfly.plugins</groupId>
@@ -114,7 +114,7 @@
                 <plugin>
                     <groupId>org.web3j</groupId>
                     <artifactId>web3j-maven-plugin</artifactId>
-                    <version>4.1.0</version>
+                    <version>4.2.0</version>
                 </plugin>
                 <plugin>
                     <groupId>org.codehaus.mojo</groupId>
@@ -151,8 +151,8 @@
     </build>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <slf4j.version>1.7.25</slf4j.version>
-        <log4j.version>2.11.1</log4j.version>
+        <slf4j.version>1.7.26</slf4j.version>
+        <log4j.version>2.11.2</log4j.version>
         <web3j.version>4.2.0</web3j.version>
         <ethereum-node-location>http://127.0.0.1:8545</ethereum-node-location>
         <ethereum-node-web-socket-location>ws://127.0.0.1:8546</ethereum-node-web-socket-location>
@@ -231,7 +231,7 @@
             <dependency>
                 <groupId>joda-time</groupId>
                 <artifactId>joda-time</artifactId>
-                <version>2.10</version>
+                <version>2.10.1</version>
             </dependency>
             <dependency>
                 <groupId>org.jboss.arquillian</groupId>
@@ -243,7 +243,7 @@
             <dependency>
                 <groupId>org.wildfly.arquillian</groupId>
                 <artifactId>wildfly-arquillian-container-remote</artifactId>
-                <version>2.1.1.Final</version>
+                <version>2.2.0.Final</version>
             </dependency>
             <dependency>
                 <groupId>org.jboss.shrinkwrap.resolver</groupId>
@@ -265,6 +265,12 @@
             <url>https://dl.bintray.com/web3j/maven/</url>
         </repository>
     </repositories>
+    <pluginRepositories>
+        <pluginRepository>
+            <id>bintray-web3j</id>
+            <url>https://dl.bintray.com/web3j/maven/</url>
+        </pluginRepository>
+    </pluginRepositories>
     <modules>
         <module>ethereum-rar</module>
         <module>ethereum-rar-demo</module>
