--- a/ethereum-rar-demo/pom.xml
+++ b/ethereum-rar-demo/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>be.e-contract</groupId>
         <artifactId>ethereum-resource-adapter</artifactId>
-        <version>1.2.7</version>
+        <version>1.2.8-SNAPSHOT</version>
     </parent>
     <name>Ethereum Resource Adapter Demo Web Application</name>
     <groupId>be.e-contract.ethereum-resource-adapter</groupId>
@@ -37,13 +37,13 @@
         <dependency>
             <groupId>be.e-contract.ethereum-resource-adapter</groupId>
             <artifactId>ethereum-ra-api</artifactId>
-            <version>1.2.7</version>
+            <version>1.2.8-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>be.e-contract.ethereum-resource-adapter</groupId>
             <artifactId>ethereum-jsf</artifactId>
-            <version>1.2.7</version>
+            <version>1.2.8-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.web3j</groupId>
@@ -53,14 +53,14 @@
         <dependency>
             <groupId>be.e-contract.ethereum-resource-adapter</groupId>
             <artifactId>ethereum-rar-demo-model</artifactId>
-            <version>1.2.7</version>
+            <version>1.2.8-SNAPSHOT</version>
             <type>ejb</type>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>be.e-contract.ethereum-resource-adapter</groupId>
             <artifactId>ethereum-ra-oracle-api</artifactId>
-            <version>1.2.7</version>
+            <version>1.2.8-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
