--- a/ethereum-jsf/pom.xml
+++ b/ethereum-jsf/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>be.e-contract</groupId>
         <artifactId>ethereum-resource-adapter</artifactId>
-        <version>1.2.9</version>
+        <version>1.2.10-SNAPSHOT</version>
     </parent>
     <name>Ethereum Resource Adapter JSF Library</name>
     <groupId>be.e-contract.ethereum-resource-adapter</groupId>
