--- a/ethereum-rar/pom.xml
+++ b/ethereum-rar/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>be.e-contract</groupId>
         <artifactId>ethereum-resource-adapter</artifactId>
-        <version>1.2.9</version>
+        <version>1.2.10-SNAPSHOT</version>
     </parent>
     <name>Ethereum Resource Adapter Archive</name>
     <groupId>be.e-contract.ethereum-resource-adapter</groupId>
@@ -54,7 +54,7 @@
         <dependency>
             <groupId>be.e-contract.ethereum-resource-adapter</groupId>
             <artifactId>ethereum-ra</artifactId>
-            <version>1.2.9</version>
+            <version>1.2.10-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.jboss.spec</groupId>
